# 533Step3

./: .coverage  AIDocumentation.md  AITesting.ipynb  CanvasMainDocs.md  CanvasMainTest.ipynb  CanvasTest.ipynb  CanvasVisualizerGuide.md  Description.docx  ExceptionsTestVisuals.ipynb  Exceptions_test.ipynb  README.md  RunTest.ipynb  TestSuite.ipynb  Tester.ipynb  VisualTest.ipynb  requirements.txt  ~$Group 2 Presentation.pptx  ~$scription.docx
.github/workflows/: main.yml
Upload Library/: LICENSE.txt  README.md  pyproject.toml
Upload Library/src/canvasAcademicAnalyzer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Upload Library/src/canvasacademicinsights/.ipynb_checkpoints/: CanvasInsights-checkpoint.py
Upload Library/src/canvasacademicinsights/canvasaianalyzer/: clean.py  grades.py  model.py  organize.py
Upload Library/src/canvasacademicinsights/canvasmain/.ipynb_checkpoints/: CanvasDataRetriever-checkpoint.py  canvasdatacleaner-checkpoint.py
Upload Library/src/canvasacademicinsights/canvasvisualizer/: canvastimevisualization.py
Upload Library/src/canvasacademicinsights/canvasvisualizer/.ipynb_checkpoints/: canvassummaryvisualization-checkpoint.py  canvastimevisualization-checkpoint.py
Upload Library/tests/: test_canvasaiorganize.py  test_canvassummaryvisualizer.py
canvasacademicinsights/canvasaianalyzer/: model.py
canvasacademicinsights/canvasmain/: canvasdataretriever.py  canvasinsights.py
canvasacademicinsights/canvasvisualizer/: canvassummaryvisualization.py
canvasacademicinsights/tests/: .coverage  test_canvasaimodel.py  (+2 more)
(+5 files in other folders)
