[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "canvasAcademicAnalyzer"
version = "0.1.0"
authors = [
{ name="Yue Wang"},
{ name="Richard Hua"},
{ name="Jordan Kaseram"}
]
description = "An example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/yueywangse/533Step3"
Issues = "https://github.com/yueywangse/533Step3/issues"